# boom

./: .gitignore  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
migrations/: 20230907230139_s3config.sql  20230912001619_selectedconfig.sql  20231003024828_uploads.sql  20231016001634_mimetype.sql  20231016002439_remove_default.sql
src/: App.tsx  Context.tsx  const.ts  index.tsx
src-tauri/: Cargo.toml  Info.plist  Release.entitlements  tauri.conf.json
src-tauri/src/: consts.rs  db.rs  error.rs  main.rs  plugin.rs  rect.rs  s3.rs  screenshot.rs  window_config.rs
src-tauri/src/db/: crud.rs  mod.rs  plugin.rs
src-tauri/src/s3/: mod.rs  plugin.rs  uploader.rs
src/components/: ConfigFormList.tsx  CreateConfigForm.tsx  Details.tsx  EditConfigForm.tsx  IconButton.tsx  Layout.tsx  PeakMeter.tsx  RecordControls.tsx  SelectDevices.tsx  Uploads.tsx
src/pages/: ConfigIdEdit.tsx  EditForm.tsx  Index.tsx  Screenshot.tsx  Settings.tsx
