[package]
name = "boom"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha", features = [ "macos-private-api"] }
tauri-plugin-http = "2.0.0-alpha"
rusty-s3 = "0.4.1"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.73"
serde-error = "0.1.2"
anyhow = "1.0.75"
thiserror = "1.0.48"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

