[package]
name = "boom"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha", features = [ "macos-private-api", "tray-icon", "icon-ico", "icon-png"] }
tauri-plugin-positioner = { version = "2.0.0-alpha", features = ["tray-icon"] }
tauri-plugin-http = "2.0.0-alpha"
rusty-s3 = "0.5.0"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.73"
serde-error = "0.1.2"
anyhow = "1.0.75"
thiserror = "1.0.48"
parking_lot = { version = "0.12.1", features = ["send_guard"] }
mime = "0.3.17"
bytes = "1.5.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
tauri-plugin-clipboard-manager = "2.0.0-alpha"
objc = "0.2.7"
cocoa = "0.25.0"
tokio = { version = "1.33.0", features = ["full"] }
device_query = "1.1.3"
screenshots = "0.8.4"
image = "0.24.7"
screencapturekit = "0.1.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-alpha"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]


[patch.crates-io]
tauri-plugin-global-shortcut = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/global-shortcut-app-handle"}

